--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,7 @@ a {
 
 .header {
     border-bottom: 1px solid #e7e9fc; 
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -86,7 +87,7 @@ gap: 40px;
     letter-spacing: -0.02em;
     color: #2e2f42;
 }
-.link-nav.active::after {
+.link-nav::after {
     content: " ";
     position: absolute;
     bottom: -1px;
@@ -95,8 +96,9 @@ gap: 40px;
     border-radius: 2px;
     width: 100%;
     height: 4px;
+    color: #404bbf;
     background-color: #404bbf;
-    
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     }
     
@@ -120,6 +122,7 @@ gap: 40px;
 }
 
 .link-address {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
     display: block;
     align-items: center;
     padding: 24px 0;
@@ -137,13 +140,13 @@ gap: 40px;
 
 
 .business {
-    min-width: 1440px;
+    max-width: 1440px;
     padding: 188px 0;
     background-color: #2e2f42;
     display: flex;
     align-items: center;
     margin: 0 auto;
-    background-image: url("../images/people-office.jpg");
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),  url("../images/people-office.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -180,6 +183,7 @@ gap: 40px;
     color: #fff;
     background-color: #4D5AE5;
     cursor: pointer;
+    background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -193,6 +197,9 @@ gap: 40px;
 }
 
 .box-svg-benefits {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-bottom: 8px;
     gap: 24px;
     position: relative;
@@ -267,6 +274,7 @@ gap: 40px;
     background-color: #FFFFFF;
     flex-basis: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px; 
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .title-team {
@@ -306,16 +314,13 @@ gap: 40px;
     color: #434455;
 }
 
-.box-team {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 8px;
-}
+
 .list-team-icon {
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 24px;
+    margin-top: 8px;
 }
 .link-team-icon {
     display: flex;
@@ -335,6 +340,10 @@ gap: 40px;
     display: flex;
     padding-top: 120px;
     padding-bottom: 120px; 
+}
+
+.list-portfolio:hover {
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .list-portfolio {
@@ -414,31 +423,34 @@ gap: 40px;
 }
 
  .footer-container {
-display: block;
-align-items: center;
-justify-content: center;
+  display: flex;
+  align-items: baseline;
+  justify-content: center;
+}
+
+.box-logo-footer {
+    margin-right: 120px;
 }
 
 .box-footer {
-    display: flex;
+    display: block;
     align-items: center;
     justify-content: center;
-    margin-left: 120px;
-
+    
 }
 
 .article-icon-footer {
+margin-bottom: 16px;
 display: flex;
 font-family: "Roboto", sans-serif;
 font-weight: 500;
 font-size: 16px;
 line-height: 150%;
 letter-spacing: 0.02em;
-color: #fff;
+color: #FFFFFF;
 }
 .footer-list-icon {
     display: flex;
-    align-items: center;
     gap: 24px;
 }
 .link-footer-icon {
