--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,7 @@ gap: 40px;
     color: #2e2f42;
 }
 .link-nav::after {
-    content: " ";
+    content: '';
     position: absolute;
     bottom: -1px;
     left: 0;
@@ -169,9 +169,10 @@ gap: 40px;
 }
 
 .button-business {
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     display: block;
     align-items: center;
-   margin: 0 auto;
+    margin: 0 auto;
     min-width: 169px;
     height: 56px;
     border: none;
@@ -323,14 +324,26 @@ gap: 40px;
     margin-top: 8px;
 }
 .link-team-icon {
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    width: 40px;
+    height: 40px;
+}
+
+.pos-team-icon {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 40px;
-    height: 40px;
+    width: 100%;
+    height: 100%;
     background-color: #4d5ae5;
     border-radius: 50%;
 }
+
+.pos-team-icon:hover, 
+.pos-team-icon:focus {
+    background-color: #404bbf;
+}
+
 .team-icon {
     
     fill: #fff;
@@ -344,6 +357,7 @@ gap: 40px;
 
 .list-portfolio:hover {
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    transform: translateY(0%);
 }
 
 .list-portfolio {
@@ -355,7 +369,30 @@ gap: 40px;
 }
 
 .li-portfolio {
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); 
     width: calc((100% - 48px) / 3); 
+}
+
+.box-img-portfolio {
+    position: relative;
+    overflow: hidden;
+}
+
+.article-portfolio-img {
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translateY(100%);
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5; 
+    padding: 40px 32px;
+    position: absolute;
+    top: 0;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
 }
 
 .title-portfolio {
@@ -425,7 +462,7 @@ gap: 40px;
  .footer-container {
   display: flex;
   align-items: baseline;
-  justify-content: center;
+  
 }
 
 .box-logo-footer {
@@ -436,6 +473,7 @@ gap: 40px;
     display: block;
     align-items: center;
     justify-content: center;
+    gap: 16px;
     
 }
 
@@ -449,19 +487,35 @@ line-height: 150%;
 letter-spacing: 0.02em;
 color: #FFFFFF;
 }
-.footer-list-icon {
-    display: flex;
-    gap: 24px;
-}
-.link-footer-icon {
+
+.list-footer-icon {
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 24px;
+   
+}
+.link-footer-icon {
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     width: 40px;
     height: 40px;
-    background-color: #4d5ae5;
-    border-radius: 50%;
 }
+
+.pos-footer-icon {
+display: flex;
+align-items: center;
+justify-content: center;
+width: 100%;
+height: 100%;
+background-color: #4d5ae5;
+border-radius: 50%;
+}
+
+.pos-footer-icon:hover,
+.pos-footer-icon:focus {
+    background-color: #4d5ae5;
+}
+
 .footer-icon {
     fill: #fff;
 }
