--- a/css/styles.css
+++ b/css/styles.css
@@ -75,7 +75,10 @@ align-items: center;
 gap: 40px;
 }
 
-
+.item-nav {
+    color: #404bbf;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .link-nav {
     position: relative;
     display: block;
@@ -86,8 +89,9 @@ gap: 40px;
     line-height: 1.5;
     letter-spacing: -0.02em;
     color: #2e2f42;
+
 }
-.link-nav::after {
+.link-nav.active::after {
     content: '';
     position: absolute;
     bottom: -1px;
@@ -346,7 +350,7 @@ gap: 40px;
 
 .team-icon {
     
-    fill: #fff;
+    fill:  #f4f4fd;
 }
 
 .portfolio {
@@ -371,6 +375,7 @@ gap: 40px;
 .li-portfolio {
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); 
     width: calc((100% - 48px) / 3); 
+    
 }
 
 .box-img-portfolio {
@@ -378,21 +383,26 @@ gap: 40px;
     overflow: hidden;
 }
 
-.article-portfolio-img {
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
     transform: translateY(100%);
     width: 100%;
     height: 100%;
     background-color: #4d5ae5; 
     padding: 40px 32px;
-    position: absolute;
-    top: 0;
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 150%;
     letter-spacing: 0.02em;
     color: #f4f4fd;
+}
+
+.li-portfolio:hover .overlay {
+    transform: translateY(0);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .title-portfolio {
@@ -492,7 +502,7 @@ color: #FFFFFF;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 24px;
+    gap: 16px;
    
 }
 .link-footer-icon {
@@ -517,5 +527,5 @@ border-radius: 50%;
 }
 
 .footer-icon {
-    fill: #fff;
+   fill: #f4f4fd;
 }
