--- a/css/styles.css
+++ b/css/styles.css
@@ -326,9 +326,10 @@ gap: 40px;
     justify-content: center;
     gap: 24px;
     margin-top: 8px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .link-team-icon {
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   
     width: 40px;
     height: 40px;
 }
@@ -384,6 +385,7 @@ gap: 40px;
 }
 
 .overlay {
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     position: absolute;
     top: 0;
     left: 0;
@@ -503,10 +505,10 @@ color: #FFFFFF;
     align-items: center;
     justify-content: center;
     gap: 16px;
-   
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .link-footer-icon {
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
     width: 40px;
     height: 40px;
 }
@@ -523,7 +525,7 @@ border-radius: 50%;
 
 .pos-footer-icon:hover,
 .pos-footer-icon:focus {
-    background-color: #4d5ae5;
+    background-color: #31d0aa;
 }
 
 .footer-icon {
