--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,10 @@ gap: 40px;
     color: #2e2f42;
 
 }
+.link-nav.active{
+    color: #404bbf;
+}
+
 .link-nav.active::after {
     content: '';
     position: absolute;
@@ -373,7 +377,8 @@ gap: 40px;
 }
 
 .li-portfolio {
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition-property: box-shadow;
     width: calc((100% - 48px) / 3); 
     
 }
@@ -401,9 +406,10 @@ gap: 40px;
     color: #f4f4fd;
 }
 
-.li-portfolio:hover .overlay {
+.li-portfolio:hover .overlay,
+.li-portfolio:focus .overlay{
     transform: translateY(0);
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); 
 }
 
 .title-portfolio {
