add tochno last icon

--- a/css/styles.css
+++ b/css/styles.css
@@ -383,6 +383,11 @@ gap: 40px;
     
 }
 
+.li-portfolio:hover,
+.li-portfolio:focus {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); 
+}
+
 .box-img-portfolio {
     position: relative;
     overflow: hidden;
@@ -406,10 +411,8 @@ gap: 40px;
     color: #f4f4fd;
 }
 
-.li-portfolio:hover .overlay,
-.li-portfolio:focus .overlay{
+.li-portfolio:hover .overlay {
     transform: translateY(0);
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); 
 }
 
 .title-portfolio {
